添加新功能，生成Vue3项目，加入可视化修改功能