@@ -1,27 +1,31 @@
 package com.carl.codegen.ai.tools;
 
-import com.carl.codegen.constant.AppConstant;
+import cn.hutool.core.io.FileUtil;
+import cn.hutool.json.JSONObject;
 import dev.langchain4j.agent.tool.P;
 import dev.langchain4j.agent.tool.Tool;
 import dev.langchain4j.agent.tool.ToolMemoryId;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Component;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 
 /**
  * 文件写入工具，AI 可通过工具调用的方式将生成的代码写入文件。
  */
 @Slf4j
-public class FileWriteTool {
+@Component
+public class FileWriteTool extends BaseTool {
 
-    private final String codeGenType;
+    public FileWriteTool() {
+    }
 
     public FileWriteTool(String codeGenType) {
-        this.codeGenType = codeGenType;
+        super(codeGenType);
     }
 
     @Tool("写入文件到指定路径，每次调用只写入一个文件，多个文件请多次调用")
@@ -33,19 +37,12 @@ public class FileWriteTool {
             @ToolMemoryId Long appId
     ) {
         try {
-            Path path = Paths.get(relativeFilePath);
-            if (!path.isAbsolute()) {
-                String projectDirName = codeGenType + "_" + appId;
-                Path projectRoot = Paths.get(AppConstant.CODE_OUTPUT_ROOT_DIR, projectDirName);
-                path = projectRoot.resolve(relativeFilePath);
-            }
-            // 确保父目录存在
+            Path path = resolvePath(relativeFilePath, appId);
             Path parentDir = path.getParent();
             if (parentDir != null) {
                 Files.createDirectories(parentDir);
             }
-            // 写入文件
-            Files.write(path, content.getBytes(),
+            Files.writeString(path, content, StandardCharsets.UTF_8,
                     StandardOpenOption.CREATE,
                     StandardOpenOption.TRUNCATE_EXISTING);
             log.info("成功写入文件: {}", path.toAbsolutePath());
@@ -55,5 +52,28 @@ public class FileWriteTool {
             log.error(errorMessage, e);
             return errorMessage;
         }
+    }
+
+    @Override
+    public String getToolName() {
+        return "writeFile";
+    }
+
+    @Override
+    public String getDisplayName() {
+        return "写入文件";
+    }
+
+    @Override
+    public String generateToolExecutedResult(JSONObject arguments) {
+        String relativeFilePath = arguments.getStr("relativeFilePath");
+        String suffix = FileUtil.getSuffix(relativeFilePath);
+        String content = arguments.getStr("content");
+        return String.format("""
+                %s
+                ```%s
+                %s
+                ```
+                """, formatToolCall(relativeFilePath), suffix, content);
     }
 }
